<resources>
    <string name="app_name">Bookeep</string>

    <string name="btn_submit">Submit</string>
    <string name="btn_debt">Debts</string>
    <string name="btn_projects">Projects</string>
    <string name="btn_payments">Payments</string>
    <string name="btn_devs">Devs</string>

    <string name="new_debt">Add New Debt</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="amount">Amount: </string>
    <string name="add">Add</string>
    <string name="created">Created On: </string>

    <string name="new_payment">Add New Payment</string>

    <string name="new_dev">Add New Developer</string>
    <string name="name">Name: </string>
    <string name="technologies">Technologies (separate by \" , \")</string>
    <string name="joined_on">Joined On:</string>
    <string name="developers">Developers: </string>
    <string name="add_devs">Developers (separate by \",\")</string>

    <string name="new_project">Add New Project</string>
    <string name="desc">Short Description: </string>
    <string name="cost">Cost: </string>
    <string name="client_name">Client\'s Name: </string>
    <string name="started_on">Started On: </string>
    <string name="completed_on">Completed On: </string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="new_milestone">Add New Milestone</string>
    <string name="project_name">Project Name: </string>
    <string name="value">Value: </string>
    <string name="xrate">Exchange Rate: </string>
    <string name="search_milestone">Search Milestone</string>
    <string name="search">Search</string>

    <string-array name="currencies">
        <item>USD</item>
        <item>PKR</item>
        <item>SAR</item>
        <item>AED</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>
</resources>