<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:id="@+id/tv_debt_from"
        android:text="@string/from"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_debt_to"
        android:padding="2dp"
        android:textSize="20dp"
        android:text="@string/to"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_debt_amount"
        android:padding="2dp"
        android:textSize="20dp"
        android:text="@string/amount"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_debt_on"
        android:padding="2dp"
        android:text="@string/created"
        android:textSize="20dp"
        />

</LinearLayout>